--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
     "@radix-ui/react-label": "^2.1.1",
@@ -23,6 +25,7 @@
     "@radix-ui/react-toast": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-table": "^8.20.6",
+    "@types/three": "^0.171.0",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -37,7 +40,10 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "react-remove-scroll": "^2.6.0",
+    "reactflow": "^11.11.4",
+    "socket.io": "^4.8.1",
     "tailwind-merge": "^2.5.5",
+    "three": "^0.172.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
