--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
+    "@google/genai": "^0.9.0",
+    "@hookform/resolvers": "^5.0.1",
     "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-accordion": "^1.2.2",
@@ -20,13 +22,16 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-select": "^2.1.3",
+    "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-table": "^8.20.6",
     "@types/three": "^0.171.0",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,13 +43,16 @@
     "openai": "^4.76.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-markdown": "^9.0.1",
     "react-remove-scroll": "^2.6.0",
+    "react-textarea-autosize": "^8.5.9",
     "reactflow": "^11.11.4",
     "socket.io": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "three": "^0.172.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
