--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.3",
+    "@radix-ui/react-toggle-group": "^1.1.10",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-table": "^8.20.6",
