--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
-    "@google/genai": "^0.9.0",
+    "@google/genai": "^1.1.0",
     "@hookform/resolvers": "^5.0.1",
     "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^6.0.1",
@@ -34,6 +34,7 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
+    "bufferutil": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
@@ -52,7 +53,9 @@
     "socket.io": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "three": "^0.172.0",
+    "utf-8-validate": "^6.0.5",
     "uuid": "^11.0.3",
+    "ws": "^8.18.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -62,6 +65,7 @@
     "@types/node": "^22.10.1",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "@types/ws": "^8.18.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.1",
