--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@shadcn/ui": "^0.0.4",
+    "@supabase/supabase-js": "^2.56.1",
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-table": "^8.20.6",
     "@types/three": "^0.171.0",
@@ -39,8 +40,6 @@
     "clsx": "^2.1.1",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.468.0",
-    "mongodb": "^6.12.0",
-    "mongoose": "^8.0.3",
     "next": "^15.0.4",
     "next-auth": "^4.24.5",
     "openai": "^4.76.0",
