feat: add recharts for data visualization and enhance message display in chat interface
- Introduced recharts library for improved data visualization capabilities.
- Updated message display area to automatically scroll to the latest message.
- Refined input area design for better user experience with new styling and button integration.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-remove-scroll": "^2.6.0",
     "react-textarea-autosize": "^8.5.9",
     "reactflow": "^11.11.4",
+    "recharts": "^3.1.2",
     "socket.io": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "three": "^0.172.0",
