--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "bufferutil": "^4.0.9",
+    "caniuse-lite": "",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "html-to-image": "^1.11.13",
