chore: update dependencies and refactor authentication handling
- Added Supabase authentication helpers to package.json for improved auth management.
- Refactored NextAuthProvider to utilize Supabase client for session management.
- Updated auth.ts to remove legacy NextAuthOptions and streamline session retrieval.
- Introduced new form components for better form handling and validation.
- Added shims for next-auth to maintain compatibility with existing components.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "next-auth": [
+        "./src/lib/next-auth-shim.ts"
+      ],
+      "next-auth/react": [
+        "./src/lib/next-auth-react-shim.ts"
       ]
     }
   },
