--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@shadcn/ui": "^0.0.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.1",
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-table": "^8.20.6",
