--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "caniuse-lite": "",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.468.0",
     "next": "^15.0.4",
