refactor: migrate from MongoDB models to Supabase integration
- Removed legacy MongoDB models and replaced them with Supabase data structures.
- Updated API routes to fetch and manipulate data using Supabase client.
- Added new TypeScript types for database entities in db.ts to align with Supabase schema.
- Adjusted tsconfig.json to include new type definitions for better type safety.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
       ],
       "next-auth/react": [
         "./src/lib/next-auth-react-shim.ts"
+      ],
+      "@/lib/models/*": [
+        "./src/types/db.ts"
       ]
     }
   },
