feat: implement credits system with purchase and usage management
This commit introduces a comprehensive credits system, allowing users to purchase credits for AI learning sessions. It includes new API routes for credit purchase, deduction, and status retrieval, as well as a webhook for Stripe payment processing. The user model is updated to include credit fields, and a migration script is added to set up the necessary database structure. Additionally, a CreditsDashboard component is created for users to manage their credits and view transaction history, enhancing the overall user experience.

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "reactflow": "^11.11.4",
     "recharts": "^3.1.2",
     "socket.io": "^4.8.1",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^2.5.5",
     "three": "^0.172.0",
     "utf-8-validate": "^6.0.5",
