--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "html-to-image": "^1.11.13",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
     "next": "^15.0.4",
     "next-auth": "^4.24.5",
@@ -52,6 +53,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-markdown": "^9.0.1",
     "react-remove-scroll": "^2.6.0",
     "react-textarea-autosize": "^8.5.9",
@@ -71,6 +73,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/bcryptjs": "^2.4.6",
     "@types/google.maps": "^3.58.1",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^22.10.1",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
