--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tanstack/react-table": "^8.20.6",
     "@types/three": "^0.171.0",
     "@types/uuid": "^10.0.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "bufferutil": "^4.0.9",
