chore: update dependencies and improve routing logic
This commit updates the `caniuse-lite` dependency to a specific version for better compatibility. It also modifies the login routing logic to redirect users to the '/session' page instead of the root path after login. Additionally, the SafeCodeRunner component is updated to use the latest version of the p5.js library, enhancing the functionality of visual aids. Minor adjustments are made to the audio streaming hook to improve upload handling and session management.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "bufferutil": "^4.0.9",
-    "caniuse-lite": "",
+    "caniuse-lite": "^1.0.30001749",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
