docs: update .env.example with current environment variables
- Remove obsolete MongoDB/NextAuth references
- Add Supabase, Gemini, Stripe, Helicone, Tavily config
- Organize variables by category with comments

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,45 @@
-MONGODB_URI=
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
-OPENAI_BASE_URL=
+# ===========================================
+# Supabase Configuration
+# ===========================================
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+
+# ===========================================
+# OpenAI Configuration
+# ===========================================
 OPENAI_API_KEY=
+OPENAI_BASE_URL=
 OPENAI_MODEL=
+
+# ===========================================
+# Google Gemini Configuration
+# ===========================================
+GEMINI_API_KEY=
+GEMINI_BASE_URL=
+NEXT_PUBLIC_GEMINI_LIVE_MODEL=
+
+# ===========================================
+# Stripe Configuration
+# ===========================================
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_CREDIT_PRODUCT_ID=
+STRIPE_CREDIT_PRICE_ID=
+
+# ===========================================
+# Tavily Search API (Optional)
+# ===========================================
 TAVILY_API_KEY=
+
+# ===========================================
+# Helicone Observability (Optional)
+# ===========================================
+HELICONE_BASE_URL=
+HELICONE_API_KEY=
+
+# ===========================================
+# Application Settings
+# ===========================================
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+AI_PROVIDER=GEMINI
